no longer support HTML markup, can be accessed as DOM elements or
styled directly with CSS. Some older browsers lack this function of
the canvas API (this doesn't affect IE); if this is a problem, either
continue using an older version of Flot or try an emulation helper
such as canvas-text or Flashcanvas.



Changes:

- Canvas text support for labels (sponsored by YCharts.com).

Bug fixes

- Fix problem with null values and pie plugin (patch by gcruxifix,
  issue 500).
- Fix problem with threshold plugin and bars (based on patch by
  kaarlenkaski, issue 348).
- Fix axis box calculations so the boxes include the outermost part of
  the labels too.
  

Flot 0.7
--------

API changes:

Multiple axes support. Code using dual axes should be changed from
using x2axis/y2axis in the options to using an array (although
backwards-compatibility hooks are in place). For instance,

  {
    xaxis: { ... }, x2axis: { ... },
    yaxis: { ... }, y2axis: { ... }
  }

becomes

  {
    xaxes: [ { ... }, { ... } ],
    yaxes: [ { ... }, { ... } ]
  }

Note that if you're just using one axis, continue to use the
xaxis/yaxis directly (it now sets the default settings for the
arrays). Plugins touching the axes must be ported to take the extra
axes into account, check the source to see some examples.

A related change is that the visibility of axes is now auto-detected.
So if you were relying on an axis to show up even without any data in
the chart, you now need to set the axis "show" option explicitly.

"tickColor" on the grid options is now deprecated in favour of a
corresponding option on the axes, so { grid: { tickColor: "#000" }}
becomes { xaxis: { tickColor: "#000"}, yaxis: { tickColor: "#000"} },
but if you just configure a base color Flot will now autogenerate a
tick color by adding transparency. Backwards-compatibility hooks are
in place.

Final note: now that IE 9 is coming out with canvas support, you may
want to adapt the excanvas include to skip loading it in IE 9 (the